workloads/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  labels:
    app: vikunja
spec:
  selector:
    app: vikunja
  ports:
    - name: http
      port: 3456
      targetPort: http
