workloads/vikunja/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`task.bapttf.com`)
      kind: Rule
      services:
        - name: vikunja
          port: 3456
  tls: {}
